RWA-4826 refactor LOCK_AND_GET_NEXT_MESSAGE plus indexing